# chrzaszcz-simple

./: .githooks.ini  README.md  cleanup.sh  pyproject.toml
code/: control-simple.py  control-webservice.py  maestro.py
code/templates/: control-application.html
